{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 117,
  "lineage": "872d8746-7721-8ec7-947e-3c78937f3105",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:471112626235:loadbalancer/app/fete-network/d9cb2c78e8fe943c",
            "arn_suffix": "app/fete-network/d9cb2c78e8fe943c",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fete-network-181839141.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:471112626235:loadbalancer/app/fete-network/d9cb2c78e8fe943c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fete-network",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0291813d329ecb379"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a1c5b580e565dbdd"
              },
              {
                "subnet_id": "subnet-0b0e9a240624bf154"
              },
              {
                "subnet_id": "subnet-0cd655a0214a55e18"
              }
            ],
            "subnets": [
              "subnet-0a1c5b580e565dbdd",
              "subnet-0b0e9a240624bf154",
              "subnet-0cd655a0214a55e18"
            ],
            "tags": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-0b622721b8309930d",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "api_tcp",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:471112626235:listener/app/fete-network/d9cb2c78e8fe943c/8ff41288046f4ba5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:471112626235:targetgroup/tf-20240131060140257000000001/4e9468f184565b37",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:471112626235:listener/app/fete-network/d9cb2c78e8fe943c/8ff41288046f4ba5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:471112626235:loadbalancer/app/fete-network/d9cb2c78e8fe943c",
            "mutual_authentication": [],
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "fete_ecs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:471112626235:targetgroup/tf-20240131060140257000000001/4e9468f184565b37",
            "arn_suffix": "targetgroup/tf-20240131060140257000000001/4e9468f184565b37",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:471112626235:targetgroup/tf-20240131060140257000000001/4e9468f184565b37",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-20240131060140257000000001",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:security-group/sg-0291813d329ecb379",
            "description": "Security group for fete-network application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0291813d329ecb379",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "fete-network-20240131045426477000000006",
            "name_prefix": "fete-network-",
            "owner_id": "471112626235",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:security-group-rule/sgr-0b5f767fe43076ef5",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0b5f767fe43076ef5",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0291813d329ecb379",
            "security_group_rule_id": "sgr-0b5f767fe43076ef5",
            "tags": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:security-group-rule/sgr-0b6df65dd83801a25",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 5000,
            "id": "sgr-0b6df65dd83801a25",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0291813d329ecb379",
            "security_group_rule_id": "sgr-0b6df65dd83801a25",
            "tags": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo",
              "terraform-aws-modules": "alb"
            },
            "to_port": 5000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:security-group/sg-05d06077b64b9ac7f",
            "description": "Autoscaling group security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d06077b64b9ac7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "p2p ports",
                "from_port": 4001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4001
              },
              {
                "cidr_blocks": [],
                "description": "api",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0291813d329ecb379"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "fete-network-20240131045426574200000007",
            "name_prefix": "fete-network-",
            "owner_id": "471112626235",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2358633925",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05d06077b64b9ac7f",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "p2p ports",
            "from_port": 4001,
            "id": "sgrule-1516327462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05d06077b64b9ac7f",
            "security_group_rule_id": "sgr-02f34048cf025aba4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 4001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.autoscaling_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "api",
            "from_port": 5000,
            "id": "sgrule-3150448222",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05d06077b64b9ac7f",
            "security_group_rule_id": "sgr-052bba153a8d84221",
            "self": false,
            "source_security_group_id": "sg-0291813d329ecb379",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-03abd04d5a0117d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "available_ip_address_count": 4088,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03abd04d5a0117d5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:security-group/sg-0b7fe34f202ff0ce7",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b7fe34f202ff0ce7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Service port",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0291813d329ecb379"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "fete-network-20240131050135195300000006",
            "name_prefix": "fete-network-",
            "owner_id": "471112626235",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.ecs_optimized_ami",
            "module.autoscaling.aws_autoscaling_group.idc",
            "module.autoscaling.aws_autoscaling_group.this",
            "module.autoscaling.aws_autoscaling_policy.this",
            "module.autoscaling.aws_autoscaling_schedule.this",
            "module.autoscaling.aws_iam_instance_profile.this",
            "module.autoscaling.aws_iam_role.this",
            "module.autoscaling.aws_iam_role_policy_attachment.this",
            "module.autoscaling.aws_launch_template.this",
            "module.autoscaling.data.aws_default_tags.current",
            "module.autoscaling.data.aws_iam_policy_document.assume_role_policy",
            "module.autoscaling.data.aws_partition.current",
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_http_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 5000,
            "id": "sgrule-2926207591",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b7fe34f202ff0ce7",
            "security_group_rule_id": "sgr-08dac58e7e15fc4f3",
            "self": false,
            "source_security_group_id": "sg-0291813d329ecb379",
            "timeouts": null,
            "to_port": 5000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.ecs_optimized_ami",
            "module.alb.aws_security_group.this",
            "module.autoscaling.aws_autoscaling_group.idc",
            "module.autoscaling.aws_autoscaling_group.this",
            "module.autoscaling.aws_autoscaling_policy.this",
            "module.autoscaling.aws_autoscaling_schedule.this",
            "module.autoscaling.aws_iam_instance_profile.this",
            "module.autoscaling.aws_iam_role.this",
            "module.autoscaling.aws_iam_role_policy_attachment.this",
            "module.autoscaling.aws_launch_template.this",
            "module.autoscaling.data.aws_default_tags.current",
            "module.autoscaling.data.aws_iam_policy_document.assume_role_policy",
            "module.autoscaling.data.aws_partition.current",
            "module.autoscaling_sg.aws_security_group.this",
            "module.autoscaling_sg.aws_security_group.this_name_prefix",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:network-acl/acl-0f391179cbafcf41e",
            "default_network_acl_id": "acl-0f391179cbafcf41e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f391179cbafcf41e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "471112626235",
            "subnet_ids": [
              "subnet-0329c880165eef0fc",
              "subnet-03abd04d5a0117d5e",
              "subnet-0580938b18ba0579b",
              "subnet-0a1c5b580e565dbdd",
              "subnet-0b0e9a240624bf154",
              "subnet-0cd655a0214a55e18"
            ],
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:route-table/rtb-0081ef462c128d8c1",
            "default_route_table_id": "rtb-0081ef462c128d8c1",
            "id": "rtb-0081ef462c128d8c1",
            "owner_id": "471112626235",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:security-group/sg-0ef3e90d85eaddca7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ef3e90d85eaddca7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "471112626235",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5dd911ae0093c58",
            "association_id": "eipassoc-026807546ed4f9ebf",
            "domain": "vpc",
            "id": "eipalloc-0a5dd911ae0093c58",
            "network_border_group": "us-east-2",
            "network_interface": "eni-07925299b7b600e98",
            "private_dns": "ip-10-0-48-167.us-east-2.compute.internal",
            "private_ip": "10.0.48.167",
            "public_dns": "ec2-13-59-39-49.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.39.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:internet-gateway/igw-0e4f69653c5f3dc6d",
            "id": "igw-0e4f69653c5f3dc6d",
            "owner_id": "471112626235",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5dd911ae0093c58",
            "association_id": "eipassoc-026807546ed4f9ebf",
            "connectivity_type": "public",
            "id": "nat-0f0863b6da8a2ab0a",
            "network_interface_id": "eni-07925299b7b600e98",
            "private_ip": "10.0.48.167",
            "public_ip": "13.59.39.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b0e9a240624bf154",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ee601e10978d4ff1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f0863b6da8a2ab0a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ee601e10978d4ff",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4f69653c5f3dc6d",
            "id": "r-rtb-0511aa113bf0471fe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0511aa113bf0471fe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:route-table/rtb-01ee601e10978d4ff",
            "id": "rtb-01ee601e10978d4ff",
            "owner_id": "471112626235",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f0863b6da8a2ab0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:route-table/rtb-0511aa113bf0471fe",
            "id": "rtb-0511aa113bf0471fe",
            "owner_id": "471112626235",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4f69653c5f3dc6d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b18d096821f4b2f5",
            "route_table_id": "rtb-01ee601e10978d4ff",
            "subnet_id": "subnet-03abd04d5a0117d5e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-005902519827cec58",
            "route_table_id": "rtb-01ee601e10978d4ff",
            "subnet_id": "subnet-0580938b18ba0579b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed612db61c187102",
            "route_table_id": "rtb-01ee601e10978d4ff",
            "subnet_id": "subnet-0329c880165eef0fc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc3df8beb4c8667a",
            "route_table_id": "rtb-0511aa113bf0471fe",
            "subnet_id": "subnet-0b0e9a240624bf154"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07979c4f919894a7e",
            "route_table_id": "rtb-0511aa113bf0471fe",
            "subnet_id": "subnet-0cd655a0214a55e18"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028fc49b9cc77a97a",
            "route_table_id": "rtb-0511aa113bf0471fe",
            "subnet_id": "subnet-0a1c5b580e565dbdd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-03abd04d5a0117d5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03abd04d5a0117d5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-0580938b18ba0579b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0580938b18ba0579b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-0329c880165eef0fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0329c880165eef0fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-0b0e9a240624bf154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0e9a240624bf154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-0cd655a0214a55e18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd655a0214a55e18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:subnet/subnet-0a1c5b580e565dbdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c5b580e565dbdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112626235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "vpc_id": "vpc-0b622721b8309930d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:471112626235:vpc/vpc-0b622721b8309930d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f391179cbafcf41e",
            "default_route_table_id": "rtb-0081ef462c128d8c1",
            "default_security_group_id": "sg-0ef3e90d85eaddca7",
            "dhcp_options_id": "dopt-045d3fadf844e0873",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b622721b8309930d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0081ef462c128d8c1",
            "owner_id": "471112626235",
            "tags": {
              "Name": "fete-network",
              "Role": "demo"
            },
            "tags_all": {
              "Name": "fete-network",
              "Role": "demo"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}